# ETL_Python_API_MongoDB

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: eda_mongodb.ipynb  etl_mongodb.py
